# sncf_playground

./: .gitignore  DockerFile  Dockerfile  LICENSE  README.md  main_notebook.ipynb  nixtla_baseline.py  pyproject.toml  requirements.txt  sync_dependencies.sh
.github/workflows/: docker-image.yml  sync_dependencies.yml
app/: app.py
attendance/: evaluate.ipynb
attendance/app/: app.py  utils.py
attendance/experiment/: chain_tree_model.py  cqr_forecast.py  direct_model_nn.py  direct_model_tree.py  gam.py  neural_forecast.py  project_utils.py  statistical_forecast.py
attendance/src/: project_utils.py
experiment/: chain_model.py  direct_model.py  exp_direct_forecasting.py  gam.py  neural_forecast.py  nn_direct_model.py  statistical_model.py  transfer_learning.py
lightning_logs/version_0/: events.out.tfevents.1718264292.WXFR10075203  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1718264315.WXFR10075203  hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1718271941.WXFR10075203
lightning_logs/version_11/: events.out.tfevents.1718272146.WXFR10075203
lightning_logs/version_12/: events.out.tfevents.1718281881.WXFR10075203
lightning_logs/version_13/: events.out.tfevents.1718286766.WXFR10075203
lightning_logs/version_14/: events.out.tfevents.1718286766.WXFR10075203
lightning_logs/version_15/: events.out.tfevents.1718286766.WXFR10075203
lightning_logs/version_16/: events.out.tfevents.1718286804.WXFR10075203
lightning_logs/version_17/: events.out.tfevents.1718286804.WXFR10075203
lightning_logs/version_18/: events.out.tfevents.1718286804.WXFR10075203
lightning_logs/version_19/: events.out.tfevents.1718286850.WXFR10075203
lightning_logs/version_2/: events.out.tfevents.1718264391.WXFR10075203
lightning_logs/version_20/: events.out.tfevents.1718286850.WXFR10075203
lightning_logs/version_21/: events.out.tfevents.1718286850.WXFR10075203
lightning_logs/version_22/: events.out.tfevents.1718287242.WXFR10075203
lightning_logs/version_23/: events.out.tfevents.1718287242.WXFR10075203
lightning_logs/version_24/: events.out.tfevents.1718287242.WXFR10075203
nostradamus/: __init__.py
src/: project_utils.py
streamlit_app/: app.py
(+124 files in other folders)
