[tool.poetry]
name = "sncf-project"
version = "0.1.0"
description = ""
authors = ["awarembourg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.14.2"
lightgbm = "^4.3.0"
torch = "^2.3.1"
statsforecast = "^1.7.5"
polars = "^0.20.31"
polars-u64-idx = "^0.20.31"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
