[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nostradamus"
version = "1.0.0"
description = "This is a light-weight global forecasting package"
authors = ["Alexandre Warembourg : <alexandrewarembourg59810@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "nostradamus"}]
keywords = ["forecasting", "time-series", "data-science"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
statsmodels = "^0.14.2"
lightgbm = "^4.3.0"
torch = "^2.3.1"
statsforecast = "^1.7.5"
polars = "^0.20.31"
polars-u64-idx = "^0.20.31"
streamlit = "^1.36.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
pandas = "^2.2.2"
optuna = "^3.6.1"
fastapi = "^0.111.1"
scikit-learn = "^1.5.1"
pygam = "^0.9.1"
holidays = "^0.53"
neuralforecast = "^1.7.3"
mapie = "^0.8.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.8.0"
pre-commit = "^2.12.0"
black = "^20.8b1"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py311"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100